tests/snapshots/test_generics__ty_param_bound-3.snap
---
created: "2019-03-11T05:40:13.064709777Z"
creator: insta@0.7.1
source: tests/test_generics.rs
expression: syntax_tree
---
Trait(
    TraitBound {
        paren_token: None,
        modifier: None,
        lifetimes: None,
        path: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        Debug
                    ),
                    arguments: None
                }
            ]
        }
    }
)
