tests/snapshots/test_generics__ty_param_bound-4.snap
---
created: "2019-03-11T05:40:15.210326918Z"
creator: insta@0.7.1
source: tests/test_generics.rs
expression: syntax_tree
---
Trait(
    TraitBound {
        paren_token: None,
        modifier: Maybe(
            Question
        ),
        lifetimes: None,
        path: Path {
            leading_colon: None,
            segments: [
                PathSegment {
                    ident: Ident(
                        Sized
                    ),
                    arguments: None
                }
            ]
        }
    }
)
