tests/snapshots/test_generics__ty_param_bound.snap
---
created: "2019-03-11T05:40:08.879701944Z"
creator: insta@0.7.1
source: tests/test_generics.rs
expression: syntax_tree
---
Lifetime(
    Lifetime {
        apostrophe: Span,
        ident: Ident(
            a
        )
    }
)
