tests/snapshots/test_generics__where_clause_at_end_of_input.snap
---
created: "2019-03-11T05:40:08.879661715Z"
creator: insta@0.7.1
source: tests/test_generics.rs
expression: syntax_tree
---
WhereClause {
    where_token: Where,
    predicates: []
}
